--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -129,11 +129,11 @@
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
-										Act. Code
+										AC. Code
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
-										Res. Code
+										RSLT. Code
 									</th>
 									
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">
