--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -33,7 +33,9 @@
 	</div>
 	<div class="col-lg-12" style="min-height: 150px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
-
+<div class="row" style="margin-top: 3px;">
+	<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
+</div>
 
 
 
