--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -30,8 +30,8 @@
 				<th style="text-align: center;">วันนัดชำระ</th>
 				<th style="text-align: center;">ยอดนัดชำระ</th>
 				<th style="text-align: center;">วันนัด Call</th>
-				<th style="text-align: center;">Act. Code</th>
-				<th style="text-align: center;">Res. Code</th>
+				<th style="text-align: center;">AC. Code</th>
+				<th style="text-align: center;">RSLT. Code</th>
 				<th style="text-align: center;">ผู้บันทึก</th>
 				<th style="text-align: center;"></th>
 			</tr>
