--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -7,17 +7,17 @@
 	</div>
 
 	<div class="col-lg-12">
-		<div style="background-color: #356190;" class="comm-rcorners-1">
+		<div style="background-color: #356190; margin-bottom: 1px;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-lg-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
 				<div class="col-lg-5 mayfender" style="text-align: right; margin: 0; padding-right: 6px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
 				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;"
-					 ng-style="f.isNotice ? {'cursor': 'pointer'} : {}" ng-click="f.isNotice ? noticeMenu(taskDetail[f.columnName+'_hide']) : ''">
+					 ng-style="f.isNotice ? {'cursor': 'pointer'} : {}" ng-click="f.isNotice ? noticeMenu(detail[f.columnName+'_hide']) : ''">
 						{{ 
-						   f.dataType == 'sys_owner' ? taskDetail[f.columnName][0].showname :
-						   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
-						   f.dataType == 'num' ? (taskDetail[f.columnName] | number:2) : taskDetail[f.columnName] 
+						   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
+						   f.dataType == 'date' ? (detail[f.columnName] | date:format) : 
+						   f.dataType == 'num' ? (detail[f.columnName] | number:2) : detail[f.columnName] 
 						}}
 				</div> 
 			</div>
@@ -27,7 +27,7 @@
 </div>
 <div class="row">
 	<div class="col-lg-12">
-		<div class="btn-group" style="margin: 6px 0 3px 0;">
+		<div class="btn-group" style="margin: 5px 0 3px 0;">
 		  <button type="button" class="btn btn-default btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
 		</div>
 	</div>
