--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-primary" style="margin: 0;">
+<div class="panel panel-info" style="margin: 0;">
 	<div class="panel-heading">
 		<form class="form-inline" ng-submit="search()">
 		
@@ -15,8 +15,8 @@
 		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 		  </div>
 		  		  
-		   <button type="button" class="btn btn-outline btn-default" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
-		   <button type="submit" class="btn btn-outline btn-default">ค้นหา</button>
+		   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
 	</div>		
 	
