--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -1,8 +1,8 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<div class="btn-group pull-left" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-default btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
+		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
+		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
 	</div>
 
@@ -25,16 +25,18 @@
 		</div>
 	</div>
 </div>
+
+<div class="row" style="margin-top: 3px;">
+	<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
+</div>
+
 <div class="row">
 	<div class="col-lg-12">
-		<div class="btn-group" style="margin: 5px 0 3px 0;">
-		  <button type="button" class="btn btn-default btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
+		<div class="btn-group" style="margin: 3px 0 3px 0;">
+		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
 		</div>
 	</div>
 	<div class="col-lg-12" style="min-height: 153px;" ng-include="lastTabActionMenuActive.url"></div>
-</div>
-<div class="row" style="margin-top: 3px;">
-	<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
 </div>
 
 
