--- a/backend/src/main/webapp/app/views/import_others/main.html
+++ b/backend/src/main/webapp/app/views/import_others/main.html
@@ -124,7 +124,7 @@
 									<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 									<td>{{ data.fileName }}</td>
 									<td>{{ data.rowNum | number:0 }}</td>
-									<td>{{ data.createdDateTime | date:format }}</td>
+									<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td>
 										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp;
 										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewSearch(data.id)"></i>
