--- a/backend/src/main/webapp/app/views/payment/search.html
+++ b/backend/src/main/webapp/app/views/payment/search.html
@@ -114,7 +114,7 @@
 			<tr ng-repeat="data in datas track by $index" style="color: #337AB7;">
 				<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 				<td>{{ data.fileName }}</td>
-				<td>{{ data.createdDateTime | date:format }}</td>
+				<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 				<td>
 					<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
 					<i class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)"></i>&emsp; 
