--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -107,7 +107,7 @@
 										</div>
 										
 										{{ h.dataType == 'sys_isActive' ? '': 
-										   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
+										   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
 										   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
 										   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : 
 										   data[h.columnName] 
