--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -156,14 +156,14 @@
 										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 									</td>
 									
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['createdDateTime'] | date:format }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['createdDateTime'] | date:gb_dateFormat }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['resultText'] }}</td>
 									
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:format }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:gb_dateFormat }}</td>
 									
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['appointAmount'] | number:2 }}</td>
 									
-									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:format }}</td>
+									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['nextTimeDate'] | date:gb_dateFormat }}</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_actionCode'][0].actCode }}</td>
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['link_resultCode'][0].rstCode }}</td>
@@ -172,7 +172,7 @@
 									
 									<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 										{{ 
-										   h.dataType == 'date' ? (data.taskDetail[0][h.columnName] | date:format) : 
+										   h.dataType == 'date' ? (data.taskDetail[0][h.columnName] | date:gb_dateFormat) : 
 										   h.dataType == 'num' ? (data.taskDetail[0][h.columnName] | number:2) : 
 										   h.dataType == 'sys_owner' ? data.taskDetail[0][h.columnName][0].showname : data.taskDetail[0][h.columnName] 
 										}}
