--- a/backend/src/main/webapp/app/views/trace_result_report/main.html
+++ b/backend/src/main/webapp/app/views/trace_result_report/main.html
@@ -135,7 +135,7 @@
 						<td>{{ $index + 1 + ((formData.currentPage - 1) *
 							formData.itemsPerPage) }}</td>
 						<td>{{ data.fileName }}</td>
-						<td>{{ data.createdDateTime | date:format }}</td>
+						<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 						<td><i class="fa fa-times fa-lg user-action-icon-danger"
 							ng-click="deleteItem(data.id)"></i>&emsp; <i class="fa fa-lg"
 							ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}"
