--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -76,11 +76,11 @@
 							{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 						</span>
 					</td>
-					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:format }}</td>
-					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:format }}</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:gb_dateFormat }}</td>
+					<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:gb_dateFormat }}</td>
 					<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 						{{ 
-						   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
+						   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
 						   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
 						   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
 						   }}
