--- a/backend/src/main/webapp/app/views/working/tab_payment.html
+++ b/backend/src/main/webapp/app/views/working/tab_payment.html
@@ -1,19 +1,30 @@
+
 <div class="panel panel-info" style="margin: 0;">
-	<div class="panel-heading">	
+	<div class="panel-heading">
 		<form class="form-inline" ng-submit="search()">
+		
+		  <div class="form-group input-group">
+		  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
+		  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in users">
+				<option value="">--ทั้งหมด--</option>
+	  		</select>
+		  </div>
+		
 		  <div class="form-group input-group">
 		   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
-		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword">			    
+		    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 		  </div>
+		  		  
 		   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
-	</div>
+	</div>		
+	
 	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
 		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
-			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ paymentTotalItems | number:0 }} {{'pagination.items' | translate}})
 		</span>
-		<pagination ng-change="pageChanged()" total-items="totalItems"
+		<pagination ng-change="pageChanged()" total-items="paymentTotalItems"
 					first-text="{{'pagination.first' | translate}}"
 					previous-text="{{'pagination.previous' | translate}}"
 					next-text="{{'pagination.next' | translate}}"
@@ -27,33 +38,35 @@
 	</div>
 </div>
 
-<div class="table-responsive">
+<div class="table-responsive" style="padding: 0;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr>
 				<th style="white-space: nowrap; text-align: center; color: #337AB7;">ลำดับที่</th>
-				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
+				<th ng-repeat="h in headersPayment" style="white-space: nowrap; text-align: center;">
 					<a href="" ng-click="columnOrder(h.columnName)" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						{{ h.columnNameAlias || h.columnName }}&nbsp;
-						<i id="{{ h.columnName }}_desc" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
-						<i id="{{ h.columnName }}_asc" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
+						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
+						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 			</tr>
 		<thead>
 		<!-- <tbody class="noselect"> -->
 		<tbody>
-			<tr ng-repeat="data in dataLst track by $index" style="color: #337AB7;">
-				<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
-				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+			<tr ng-repeat="data in paymentDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer; color: #337AB7;" ng-class="{info: data.id == idActive}">
+				<td style="vertical-align: middle; text-align: center;">
+					{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
+				</td>
+				<td ng-repeat="h in headersPayment" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
-					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-					   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
-					   h.dataType == 'sys_owner' ? data[h.columnName][0].showname : data[h.columnName] 
-					   }}
+					   h.dataType == 'date' ? (data[h.columnName] | date:format) : 
+					   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
+					}}
 				</td>
 			</tr>
 		</tbody>
 	</table>
 </div>
+
 
