--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -12,12 +12,23 @@
                     <i class="fa fa-list-alt fa-fw"></i> แสดงข้อมูลการตั้งค่า
                 </div>
                 <div class="panel-body">
+                	<div class="form-horizontal">
                 	
-					<div class="form-group">
-						<label class="control-label" style="color: #337AB7;">ชื่อบริษัท: </label>
-						<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="companyName">{{ companyName || 'คลิกเพื่อแก้ใข' }}</a>
-					</div>
-					
+						<div class="form-group">
+							<label class="control-label col-lg-2" style="color: #337AB7;">ชื่อบริษัท: </label>
+							<div class="col-lg-3">
+								<a href="" e-class="form-control" buttons="no" onaftersave="update()" editable-text="companyName">{{ companyName || 'คลิกเพื่อแก้ใข' }}</a>
+							</div>
+						</div>
+						
+						<div class="form-group">
+							<label class="control-label col-lg-2" style="color: #337AB7;">ฐานข้อมูลประเทศไทย: </label>
+							<div class="col-lg-3">
+								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".sql" />
+							</div>
+						</div>
+						
+                	</div>
                 </div>
                 <div class="panel-footer"></div>
             </div>
