--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -7,7 +7,7 @@
 			
 			  <div class="form-group input-group">
 			  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-			  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in users">
+			  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in users">
 					<option value="">--ทั้งหมด--</option>
 		  		</select>
 			  </div>
