--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -31,7 +31,7 @@
 							<form class="form-inline" ng-submit="search()">
 							  <div class="form-group input-group">
 							  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
-							  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.username as option.showname for option in usersSearch">
+							  	<select name="column" class="form-control" ng-model="formData.owner" ng-options="option.id as option.showname for option in usersSearch">
 									<option value="">--ทั้งหมด--</option>
 						  		</select>
 							  </div>
