--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -70,9 +70,11 @@
 			<thead>
 			<!-- <tbody class="noselect"> -->
 			<tbody>
-				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;">
+				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;" 
+					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
+					
 					<td style="vertical-align: middle; text-align: center;">
-						<span class="badge" ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3}">
+						<span class="badge">
 							{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 						</span>
 					</td>
