--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -1,5 +1,5 @@
 
-<button type="button" class="btn btn-info btn-circle" ng-click="askModal()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
+<button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
 
 <div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 0 0 3px 0;">
 	<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
@@ -23,32 +23,32 @@
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
 			<tr style="color: #337AB7;">
-				<th style="text-align: center;">ลำดับที่</th>
-				<th style="text-align: center;">วันที่ติดตาม</th>
-				<th style="text-align: center;">ผลการติดตาม</th>
-				<th style="text-align: center;">เบอร์โทร</th>
-				<th style="text-align: center;">วันนัดชำระ</th>
-				<th style="text-align: center;">ยอดนัดชำระ</th>
-				<th style="text-align: center;">วันนัด Call</th>
-				<th style="text-align: center;">AC. Code</th>
-				<th style="text-align: center;">RSLT. Code</th>
-				<th style="text-align: center;">ผู้บันทึก</th>
-				<th style="text-align: center;"></th>
+				<th style="text-align: center; white-space: nowrap;">ลำดับที่</th>
+				<th style="text-align: center; white-space: nowrap;">วันที่ติดตาม</th>
+				<th style="text-align: center; white-space: nowrap;">ผลการติดตาม</th>
+				<th style="text-align: center; white-space: nowrap;">เบอร์โทร</th>
+				<th style="text-align: center; white-space: nowrap;">วันนัดชำระ</th>
+				<th style="text-align: center; white-space: nowrap;">ยอดนัดชำระ</th>
+				<th style="text-align: center; white-space: nowrap;">วันนัด Call</th>
+				<th style="text-align: center; white-space: nowrap;">AC. Code</th>
+				<th style="text-align: center; white-space: nowrap;">RSLT. Code</th>
+				<th style="text-align: center; white-space: nowrap;">ผู้บันทึก</th>
+				<th style="text-align: center; white-space: nowrap;"></th>
 			</tr>
 		<thead>
 		<tbody>
 			<tr ng-repeat="data in askModalObj.init.traceData.traceWorks track by $index" ng-style="isEditable ? {'cursor': 'pointer'} : {}" style="color: #337AB7;" ng-click="isEditable ? askModal(data) : ''">
-				<td style="text-align: center;">{{ $index + 1 + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}</td>
-				<td style="text-align: center;">{{ data.createdDateTime | date : 'dd-MM-yyyy hh:mm:ss' }}</td>
-				<td>{{ data.resultText }}</td>
-				<td style="text-align: center;">{{ data.tel }}</td>
-				<td style="text-align: center;">{{ data.appointDate | date : 'dd-MM-yyyy' }}</td>
-				<td style="text-align: right;">{{ data.appointAmount | number:2 }}</td>
-				<td style="text-align: center;">{{ data.nextTimeDate | date : 'dd-MM-yyyy' }}</td>
-				<td style="text-align: center;">{{ data.actionCodeText }}</td>
-				<td style="text-align: center;">{{ data.resultCodeText }}</td>
-				<td>{{ data.createdByText }}</td>
-				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;">
+				<td style="text-align: center;  white-space: nowrap;">{{ $index + 1 + ((askModalObj.init.currentPage - 1) * askModalObj.init.itemsPerPage) }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.createdDateTime | date : gb_dateTimeFormat }}</td>
+				<td style="white-space: nowrap;">{{ data.resultText }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.tel }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.appointDate | date : gb_dateFormat }}</td>
+				<td style="text-align: right; white-space: nowrap;">{{ data.appointAmount | number:2 }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.nextTimeDate | date : gb_dateFormat }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.actionCodeText }}</td>
+				<td style="text-align: center; white-space: nowrap;">{{ data.resultCodeText }}</td>
+				<td style="white-space: nowrap;">{{ data.createdByText }}</td>
+				<td ng-click="askModalObj.deleteTraceDummy($event)" style="cursor: default; text-align: center;  white-space: nowrap;">
 					<i class="fa fa-times fa-lg user-action-icon-danger" title="ลบ" ng-click="askModalObj.deleteTrace($event, data.id)" ng-show="isEditable"></i>
 				</td>
 			</tr>
