--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -26,7 +26,7 @@
 	</div>
 </div>
 
-<div class="row" style="margin-top: 3px;">
+<div class="row" style="margin-top: 3px; min-height: 325px;">
 	<div class="col-lg-12" ng-include="'./views/working/tab_tasklist.html'"></div>
 </div>
 
@@ -36,7 +36,7 @@
 		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)">{{ menu.name }}</button>
 		</div>
 	</div>
-	<div class="col-lg-12" style="min-height: 153px;" ng-include="lastTabActionMenuActive.url"></div>
+	<div class="col-lg-12" style="min-height: 264px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
 
 
