--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -109,7 +109,7 @@
 							</div>
 						  </div>
 						  <div class="col-lg-6">					  
-							<div class="form-group" ng-class="{'has-error':saveAskModalForm.nextTimeDate.$invalid}">
+							<div class="form-group">
 								<label class="control-label">วันนัด Call</label>
 								<div class="input-group">
 									<input type="text" name="nextTimeDate" class="form-control datepickerNextTimeDate" style="padding-left: 12px;" 
@@ -119,14 +119,14 @@
 							</div>
 						  </div>
 						  <div class="col-lg-12">
-						  	<div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
+						  	<div class="form-group">
 								<label class="control-label">Action Code</label>
 								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.actMeaning + ' [' + option.actCode + ']' for option in askModalObj.init.actionCodes">
 									<option value="">--เลือก Action Code--</option>
 						  		</select>
 							</div>
 							
-							<div class="form-group" ng-class="{'has-error':saveAskModalForm.resultCode.$invalid}">
+							<div class="form-group">
 								<label class="control-label">Result Code</label>
 								<div class="input-group">
 									<div class="input-group-btn">
