--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -3,7 +3,7 @@
 
 	<div class="panel panel-info" style="margin: 0;">
 		<div class="panel-heading">
-			<form class="form-inline" ng-submit="search()">
+			<form class="form-inline" ng-submit="searchBtn()">
 			
 			  <div class="form-group input-group">
 			  	<span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -17,7 +17,7 @@
 			    <input type="text" class="form-control" placeholder="ค้นหา" ng-model="formData.keyword" style="width: 150px;">
 			  </div>
 			  		  
-			   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+			   <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm(false)">{{'user.search.clear_btn' | translate}}</button>
 			   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 			</form>
 		</div>
