--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -24,7 +24,7 @@
 						<div class="form-group">
 							<label class="control-label col-lg-2" style="color: #337AB7;">ฐานข้อมูลประเทศไทย: </label>
 							<div class="col-lg-3">
-								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".sql" />
+								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".dat" />
 							</div>
 						</div>
 						
