--- a/backend/src/main/webapp/app/lib/css/slideMenu.css
+++ b/backend/src/main/webapp/app/lib/css/slideMenu.css
@@ -1,37 +1,28 @@
 #thairegion-slideout {
 	position: fixed;
-	top: 205px;
-	right: 0;
-	width: 35px;
-	padding: 12px 0;
+	top: 160px;
+	left: 0;
+	/* width: 35px; */
+	/* padding: 12px 0; */
 	text-align: center;
-	background: #337AB7;
-	-webkit-transition-duration: 0.3s;
-	-moz-transition-duration: 0.3s;
-	-o-transition-duration: 0.3s;
+	/* background: #337AB7; */
 	transition-duration: 0.3s;
-	-webkit-border-radius: 5px 0 0 5px;
-	-moz-border-radius: 5px 0 0 5px;
-	border-radius: 5px 0 0 5px;
+	/* border-radius: 0 5px 5px 0; */
 }
 
 #thairegion-slideout_inner {
 	position: fixed;
-	top: 205px;
-	right: -400px;
+	top: 160px;
+	left: -400px;
 	background: #F5F5F5;
 	width: 400px;
 	padding: 25px;
-	height: 130px;
-	-webkit-transition-duration: 0.3s;
-	-moz-transition-duration: 0.3s;
-	-o-transition-duration: 0.3s;
+	min-height: 130px;
 	transition-duration: 0.3s;
 	text-align: left;
-	-webkit-border-radius: 0 0 5px 0;
-	-moz-border-radius: 0 0 5px 0;
-	border-radius: 0 0 5px 0;
-	border: 1px solid #337AB7;
+	border-radius: 0 10px 10px 0;
+	border: 1px solid #B9E563;
+	box-shadow: 0 3px #8BC220;
 }
 
 #thairegion-slideout_inner textarea {
@@ -41,11 +32,11 @@
 }
 
 #thairegion-slideout:hover {
-	right: 400px;
+	left: 400px;
 }
 
 #thairegion-slideout:hover #thairegion-slideout_inner {
-	right: 0;
+	left: 0;
 }
 
 
