--- a/backend/src/main/webapp/app/lib/css/slideMenu.css
+++ b/backend/src/main/webapp/app/lib/css/slideMenu.css
@@ -17,12 +17,12 @@
 	background: #F5F5F5;
 	width: 400px;
 	padding: 25px;
-	min-height: 300px;
+	min-height: 200px;
 	transition-duration: 0.3s;
 	text-align: left;
 	border-radius: 0 10px 10px 0;
-	border: 1px solid #B9E563;
-	box-shadow: 0 3px #8BC220;
+	border: 1px solid #4CB0F9;
+	box-shadow: 0 3px #0880D7;
 }
 
 #thairegion-slideout_inner textarea {
