--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -102,3 +102,13 @@
 }
 
 /* ----------: Override bootstrap css :---------- */
+
+/* ----------: Override Flipclock :---------- */
+.clock {
+    transform-origin: 0 0;
+    transform: scale(.3);
+}
+.flip-clock-wrapper .flip-clock-divider .flip-clock-label {
+    display: none;
+}
+/* ----------: Override Flipclock :---------- */
