--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -71,7 +71,7 @@
 			<!-- <tbody class="noselect"> -->
 			<tbody>
 				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;" 
-					ng-class="{'danger': data['sys_compareDateStatus'] == 1, 'warning': data['sys_compareDateStatus'] == 2, 'info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
+					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
 					
 					<td style="vertical-align: middle; text-align: center;">
 						<i class="fa fa-hand-o-right" ng-show="data.id == idActive"></i>
